fix: proper alignment of selected element properties panels

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -222,6 +222,7 @@ html {
 
     &.mobile {
       margin-top: 0;
+      align-items: flex-start;
       .props-group {
         flex-direction: row;
       }
